--- a/rx_digiprint_gui/Views/LB702WBView/LB702WB_ParPrinter.xaml
+++ b/rx_digiprint_gui/Views/LB702WBView/LB702WB_ParPrinter.xaml
@@ -14,9 +14,24 @@
              >
     
     <GroupBox Header="Printer" Style="{StaticResource RxGroupBox}">
-        <rx_uc:PlcParPanel x:Name="ParPanel" UnitID="Application.GUI_00_001_Main" ReadOnly="False" LabelWidth="120" Margin="0,1,0,0">
-            <rx_uc:PlcParCtrl ID="PAR_HEAD_HEIGHT"      Label="Print Height" Unit="mm"      UnitWidth="50" Format="1"/>
-            <rx_uc:PlcParCtrl ID="PAR_NIP_TENSION_1"    Label="Tension"      Unit="N/mm" UnitWidth="50" Format="1" />
-        </rx_uc:PlcParPanel>
+        <Grid>
+            <rx_uc:PlcParPanel x:Name="ParPanel" UnitID="Application.GUI_00_001_Main" ReadOnly="False" LabelWidth="120" Margin="0,1,0,0">
+                <rx_uc:PlcParCtrl ID="PAR_HEAD_HEIGHT"      Label="Print Height" Unit="mm"      UnitWidth="50" Format="1"/>
+                <rx_uc:PlcParCtrl ID="PAR_NIP_TENSION_1"    Label="Tension"      Unit="N/mm" UnitWidth="50" Format="1" />
+            </rx_uc:PlcParPanel>
+            <Grid VerticalAlignment="Bottom">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <common:RxButton Grid.Column="0" Click="Save_Clicked" Height="40" IsChecked="{Binding ElementName=ParPanel, Path=Changed}" >
+                    <Image Source="{StaticResource Yes_ico}"/>
+                </common:RxButton>
+                <common:RxButton Grid.Column="1" Click="Reload_Clicked" Height="40" >
+                    <Image Source="../../Resources/Bitmaps/Refresh.ico"/>
+                </common:RxButton>
+            </Grid>
+
+        </Grid>
     </GroupBox>
 </UserControl>
