--- a/rx_digiprint_gui/Views/LB702WBView/LB702WB_Machine.xaml
+++ b/rx_digiprint_gui/Views/LB702WBView/LB702WB_Machine.xaml
@@ -14,7 +14,6 @@
         </Style>
     </UserControl.Resources>
 
-
     <rx_uc:PlcParPanel x:Name="ParPanel" UnitID="Application.GUI_00_001_Main" ReadOnly="True" LabelWidth="0">
         <Grid>
             <Grid x:Name="BackGrid" Width="{Binding ElementName=MachineImg, Path=ActualWidth}"/>
@@ -73,6 +72,7 @@
 
                 <rx_uc:PlcParCtrl Grid.Column="2" Grid.Row="1" ID="STA_DRYER_1_TEMP_ZONE_1"    Label="" Unit="°C" Format="1" />
                 <rx_uc:PlcParCtrl Grid.Column="2" Grid.Row="3" ID="STA_DRYER_1_TEMP_ZONE_2"    Label="" Unit="°C" Format="1" />
+                <rx_uc:PlcParCtrl Grid.Column="2" Grid.Row="2" ID="STA_DRYER_1_TEMP_ZONE_3"    Label="" Unit="°C" Format="1" />
 
                 <rx_uc:PlcParCtrl Grid.Column="5" Grid.Row="1" ID="STA_DRYER_2_TEMP_ZONE_1"    Label="" Unit="°C" Format="1" />
                 <rx_uc:PlcParCtrl Grid.Column="5" Grid.Row="3" ID="STA_DRYER_2_TEMP_ZONE_2"    Label="" Unit="°C" Format="1" />
@@ -94,7 +94,8 @@
 
                 <rx_uc:PlcParCtrl Grid.Column="7" Grid.Row="1" ID="STA_DRYER_3_TEMP_ZONE_1"    Label="" Unit="°C" Format="1" />
                 <rx_uc:PlcParCtrl Grid.Column="7" Grid.Row="3" ID="STA_DRYER_3_TEMP_ZONE_2"    Label="" Unit="°C" Format="1" />
-                
+                <rx_uc:PlcParCtrl Grid.Column="7" Grid.Row="2" ID="STA_DRYER_3_TEMP_ZONE_3"    Label="" Unit="°C" Format="1" />
+
                 <rx_uc:PlcParCtrl Grid.Column="0" Grid.Row="1" ID="PAR_WIND_DIRECTION_WINDER1" Label=""     Unit="" Visibility="Collapsed" />
 
                 <Grid Grid.Column="9" Grid.RowSpan="10">
