--- a/rx_digiprint_gui/Views/LB702WBView/LB702WB_ParDryer.xaml
+++ b/rx_digiprint_gui/Views/LB702WBView/LB702WB_ParDryer.xaml
@@ -12,24 +12,38 @@
              d:DesignHeight="700" 
              d:DesignWidth="300"
              >
-    
     <GroupBox x:Name="GroupBox" Header="Dryer" Style="{StaticResource RxGroupBox}" >
-        <rx_uc:PlcParPanel UnitID="Application.GUI_00_001_Main" ReadOnly="False" LabelWidth="120" x:Name="ParPanel">
-            <rx_uc:PlcParCtrl ID="PAR_DRYER_1_MODE"                 Label="Mode"       Unit=""  UnitWidth="50" Type="Combo" x:Name="CB_Mode" />
-            <rx_uc:PlcParCtrl ID="PAR_DRYER_1_ZONE_1_POWER_MAX"     Label="Zone 1"     Unit="°C" UnitWidth="50" Format="1" />
-            <rx_uc:PlcParCtrl ID="PAR_DRYER_1_ZONE_2_POWER_MAX"     Label="Zone 2"     Unit="°C" UnitWidth="50" Format="1" />
-            <rx_uc:PlcParCtrl ID="PAR_DRYER_1_ZONE_3_POWER_MAX"     Label="Zone 3"     Unit="°C" UnitWidth="50" Format="1" />
-            <rx_uc:PlcParCtrl ID="PAR_DRYER_1_BUSES"                Label="Buses"      Unit="Pa" UnitWidth="50" Format="n" />
-            <rx_uc:PlcParCtrl ID="PAR_DRYER_1_EXHAUST"              Label="Exhaust"    Unit="Pa" UnitWidth="50" Format="n" />
+        <Grid>
+            <rx_uc:PlcParPanel UnitID="Application.GUI_00_001_Main" ReadOnly="False" LabelWidth="120" x:Name="ParPanel">
+                <rx_uc:PlcParCtrl ID="PAR_DRYER1_MODE"                        Label="Mode"         Unit=""  UnitWidth="50" Type="Combo" x:Name="CB_Mode" />
+                <rx_uc:PlcParCtrl ID="PAR_DRYER1_IR_LAMPS_ZONE1_SETPOINT"     Label="Zone 1"       Unit="°C" UnitWidth="50" Format="1" />
+                <rx_uc:PlcParCtrl ID="PAR_DRYER1_IR_LAMPS_ZONE2_SETPOINT"     Label="Zone 2"       Unit="°C" UnitWidth="50" Format="1" />
+                <rx_uc:PlcParCtrl ID="PAR_DRYER1_IR_LAMPS_ZONE3_SETPOINT"     Label="Zone 3"       Unit="°C" UnitWidth="50" Format="1" />
+                <rx_uc:PlcParCtrl ID="PAR_DRYER1_BUSES_UP_SETPOINT"           Label="Buses Up"     Unit="Pa" UnitWidth="50" Format="n" />
+                <rx_uc:PlcParCtrl ID="PAR_DRYER1_EXHAUST_UP_SETPOINT"         Label="Exhaust Up"   Unit="Pa" UnitWidth="50" Format="n" />
+                <rx_uc:PlcParCtrl ID="PAR_DRYER1_BUSES_DOWN_SETPOINT"         Label="Buses Down"   Unit="Pa" UnitWidth="50" Format="n" />
+                <rx_uc:PlcParCtrl ID="PAR_DRYER1_EXHAUST_DOWN_SETPOINT"       Label="Exhaust Down" Unit="Pa" UnitWidth="50" Format="n" />
 
-            <!--
-            <rx_uc:PlcTitle Header="Status"/>
+                <!--
+                <rx_uc:PlcTitle Header="Status"/>
 
-            <rx_uc:PlcParCtrl ID="STA_DRYER_1_UP_TEMP"        Label="Temp Up"    Unit="°C" UnitWidth="50" ReadOnly="True" />
-            <rx_uc:PlcParCtrl ID="STA_DRYER_1_DOWN_TEMP"      Label="Temp Down"  Unit="°C" UnitWidth="50" ReadOnly="True" />
-            -->
-            
-        </rx_uc:PlcParPanel>
-        
+                <rx_uc:PlcParCtrl ID="STA_DRYER_1_UP_TEMP"        Label="Temp Up"    Unit="°C" UnitWidth="50" ReadOnly="True" />
+                <rx_uc:PlcParCtrl ID="STA_DRYER_1_DOWN_TEMP"      Label="Temp Down"  Unit="°C" UnitWidth="50" ReadOnly="True" />
+                -->
+
+            </rx_uc:PlcParPanel>
+            <Grid VerticalAlignment="Bottom">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <common:RxButton Grid.Column="0" Click="Save_Clicked" Height="40" IsChecked="{Binding ElementName=ParPanel, Path=Changed}" >
+                    <Image Source="{StaticResource Yes_ico}"/>
+                </common:RxButton>
+                <common:RxButton Grid.Column="1" Click="Reload_Clicked" Height="40" >
+                    <Image Source="../../Resources/Bitmaps/Refresh.ico"/>
+                </common:RxButton>
+            </Grid>
+        </Grid>
     </GroupBox>
 </UserControl>
