--- a/rx_digiprint_gui/Views/LB702WBView/LB702WB_ParMain.xaml
+++ b/rx_digiprint_gui/Views/LB702WBView/LB702WB_ParMain.xaml
@@ -45,11 +45,13 @@
                 </Grid>
                 <rx_uc:PlcParCtrl ID="XML_MATERIAL"  Label="" x:Name="XML_MATERIAL" Visibility="Collapsed"/>
 
-                    <!--                    <rx_uc:PlcParCtrl                      ID="PAR_MATERIAL_FLEXIBILITY"            Label="Material Flexibility" MinVal="1" MaxVal="10"/> -->
-                    <rx_uc:PlcParCtrl Grid.Row="0" ID="PAR_PRINTING_SPEED"                  Label="Print Speed"  Unit="m/min"   UnitWidth="50" Format="n"/>
-                    <rx_uc:PlcParCtrl Grid.Row="2" ID="PAR_WEB_WIDTH"                       Label="Web Width"    Unit="mm"      UnitWidth="50" Format="1"/>
-                    <rx_uc:PlcParCtrl Grid.Row="3" ID="PAR_DISTANCE_TO_STOP"                Label="Stop Dist"    Unit="m"       UnitWidth="50" Format="f"/>
-                    <rx_uc:PlcParCtrl Grid.Row="4" ID="XML_ENC_OFFSET"                      Label="Encoder Adj"  Unit="inc" UnitWidth="50" Format="n"/>
+                <!--                    <rx_uc:PlcParCtrl                      ID="PAR_MATERIAL_FLEXIBILITY"            Label="Material Flexibility" MinVal="1" MaxVal="10"/> -->
+                <rx_uc:PlcParCtrl ID="PAR_PRINTING_SPEED"                  Label="Print Speed"  Unit="m/min"   UnitWidth="50" Format="n"/>
+                <rx_uc:PlcParCtrl ID="PAR_WEB_WIDTH"                       Label="Web Width"    Unit="mm"      UnitWidth="50" Format="1"/>
+                <rx_uc:PlcParCtrl ID="PAR_DISTANCE_TO_STOP"                Label="Stop Dist"    Unit="m"       UnitWidth="50" Format="f"/>
+                <rx_uc:PlcParCtrl ID="PAR_INKING_ROLLER_SPEED_PERCENTAGE"  Label="Ink Roller"   Unit="%"       UnitWidth="50" Format="n"/>
+                <rx_uc:PlcParCtrl ID="PAR_SPEED_MIXER_MOTOR"               Label="Mixer Speed"  Unit="%"       UnitWidth="50" Format="n"/>
+                <rx_uc:PlcParCtrl ID="XML_ENC_OFFSET"                      Label="Encoder Adj"  Unit="inc"     UnitWidth="50" Format="n"/>
             </rx_uc:PlcParPanel>
 
         <Grid Grid.Row="1"> <!-- Margin="0,5,0,-4"> -->
@@ -58,7 +60,7 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-
+    
                 <common:RxButton Grid.Column="0" Click="Save_Clicked" Height="40" IsChecked="{Binding ElementName=ParPanelMaterial, Path=Changed}">
                     <Image Source="{StaticResource Yes_ico}"/>
                 </common:RxButton>
