--- a/rx_digiprint_gui/Views/LH702View/LH702_Par.xaml
+++ b/rx_digiprint_gui/Views/LH702View/LH702_Par.xaml
@@ -62,9 +62,14 @@
                     <Image Source="{StaticResource Yes_ico}"/>
                 </common:RxButton>
 
-                <common:RxButton Grid.Column="2" Click="Reload_Clicked" Height="40">
+                <common:RxButton Grid.Column="1" Click="Reload_Clicked" Height="40">
                     <Image Source="../../Resources/Bitmaps/Refresh.ico"/>
                 </common:RxButton>
+
+                <common:RxButton Grid.Column="2" Click="Delete_Clicked" Height="40">
+                    <Image Source="{StaticResource delete_ico}"/>
+                </common:RxButton>
+
             </Grid>
         </Grid>
     </GroupBox>
